abstracted logic into data file and tarotCard components

--- a/public/style.css
+++ b/public/style.css
@@ -138,6 +138,11 @@ span > a {
     align-items: center;
 }
 
+.hidden {
+    opacity: 0;
+    
+}
+
 /*-------------------------------------MEDIA QUERIES--------------------------------------*/
 
 @media (max-width: 810px){
