--- a/public/style.css
+++ b/public/style.css
@@ -227,6 +227,8 @@ span > a {
     }
     .link-container {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .about-container {
         flex-direction: column;
