--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,8 @@ body {
     background-color: black;
     height: 100%;
     padding: 5px;
-    min-width: 300px;
+    min-width: 365px;
+    overflow: auto;
     color: white;
     font-size: 1rem;
     font-family: "Courier";
